kube/base/0-nextplay-namespace.yaml
#! 0-nextplay-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: nextplay
    labels:
        com.docker.compose.project: nextplay
