kube/base/game-deployment.yaml
#! game-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: game
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: game
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: nextplay
            com.docker.compose.service: game
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: nextplay
                com.docker.compose.service: game
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: game
                  image: nextplay-game
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: game-8081
                      containerPort: 8081
