kube/base/user-deployment.yaml
#! user-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: user
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: nextplay
            com.docker.compose.service: user
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: nextplay
                com.docker.compose.service: user
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: user
                  image: nextplay-user
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: user-8083
                      containerPort: 8083
