kube/base/gateway-expose.yaml
#! gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: nextplay
        com.docker.compose.service: gateway
    ports:
        - name: gateway-8080
          port: 8080
          targetPort: gateway-8080
