kube/base/gateway-service.yaml
#! gateway-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway-published
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: nextplay
        com.docker.compose.service: gateway
    ports:
        - name: gateway-8080
          port: 8080
          protocol: TCP
          targetPort: gateway-8080

# check if there is at least one published port
