kube/base/recommender-expose.yaml
#! recommender-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: recommender
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: recommender
spec:
    selector:
        com.docker.compose.project: nextplay
        com.docker.compose.service: recommender
    ports:
        - name: recommende-8082
          port: 8082
          targetPort: recommende-8082
