kube/base/user-service.yaml
#! user-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: user-published
    namespace: nextplay
    labels:
        com.docker.compose.project: nextplay
        com.docker.compose.service: user
spec:
    selector:
        com.docker.compose.project: nextplay
        com.docker.compose.service: user
    ports:
        - name: user-8083
          port: 8083
          protocol: TCP
          targetPort: user-8083
